2006-09-27  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/config.c: Changed log Debug level to Dev level
	to make logfile not filled with too many debug messages

2006-09-27  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Added "-maxruns" parameter for proxy queue
	to limit number of runs in the proxy. After reaching the limit 
	the proxy slave process is automatically restarted.

	* nsproxy/ns_proxy.man: Updated docs.
	* tests/ns_proxy.test: Added tests to check -maxruns option.

2006-09-26  Bernd Eidenschink  <eide@users.sf.net>

        * contrib/banners/ns_poweredby.gif:
        * contrib/banners/ns_poweredby.png:
	* contrib/banners/ns_logosmall.gif:
	* contrib/banners/ns_logosmall.png:
	* contrib/banners/ns_logobig.gif:
	* contrib/banners/ns_logobig.png:
	* contrib/banners/msie.html:
	* contrib/banners/README: Added two sets of banners (GIF/PNG)
	for NaviServer

2006-09-23  Vlad Seryakov  <seryakov@users.sf.net>

        * nsd/connio.c: Fixed bug in Ns_ConnWriteVChars which prevented to
        send correctly multiple small buffers.
        * tests/*: Updated test to mark encoding as knownBug until fixed and
        http chunked test according to updated ns_httptest

2006-09-22  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclinit.c:    Avoids setting objects obtained from
	* nsd/adpcmds.c:    the interpreter result, as this may
	* nsd/conn.c:       contain objects that are shared.
	* nsd/httptime.c:   So constructs like this:
	* nsd/mimetypes.c:
	* nsd/nsmain.c:     Tcl_SetIntObj(Tcl_GetObjResult(interp), n));
	* nsd/random.c:
	* nsd/tclcache.c:   are rewritten to read:
	* nsd/tclenv.c:
	* nsd/tclhttp.c:    Tcl_SetObjResult(interp, Tcl_NewIntObj(n));
	* nsd/tcljob.c:
	* nsd/tclthread.c:  This is done for all "known" Tcl object types
	* nsd/tcltime.c:    like: int, string, boolean, long, and our
	* nsd/tclvar.c:     custom object types like: time.
	* nsd/tclxkeylist.c:

	* include/ns.h: